# FastAPI-Manager

./: .gitignore  README.md  pyproject.toml
fastapi_manager/: __init__.py  __main__.py  docker-compose.yml
fastapi_manager/apps/: __init__.py  config.py  registry.py
fastapi_manager/conf/: __init__.py  global_settings.py
fastapi_manager/core/: app.py  exceptions.py  wsgi.py
fastapi_manager/db/: __init__.py  backends.py  base.py  connect.py  connection.py  mixins.py  models.py  utils.py
fastapi_manager/router/: __init__.py  base.py  conf.py  resolver.py  routerset.py
fastapi_manager/routers/: base.py
fastapi_manager/templates/: __init__.py  base.py
fastapi_manager/utils/: async_class.py  filesystem.py  functional.py  lazy.py  string.py
fastapi_manager/view/: base.py  service.py  viewset.py
fastapi_test/: manage.py
fastapi_test/fastapi_test/: asgi.py
projects/: manage.py
projects/projects/: asgi.py
test_django/test_django/: settings.py
test_project/: manage.py
test_project/penis/: apps.py  models.py
test_project/posts/: apps.py  models.py
test_project/test_app/: apps.py  router.py
test_project/test_app1/: apps.py  models.py
test_project/test_app2/: apps.py  models.py
test_project/test_project/: asgi.py  router.py  routers.py  settings.py  settings.toml
tests/: conftest.py  local_settings.toml  test_app_creating.py  test_project_creating.py  test_urls.py
tests/apps/: apps.py  test_app_config.py  test_app_registry.py  test_config.py  test_registry.py  utils.py
tests/cli/: test_cli.py
tests/db/: test_backend.py  test_db_connector.py  test_db_utils.py  test_models.py
tests/models/: test_models.py
tests/router/: test_conf.py  test_router.py
(+59 files in other folders)
