[tool.poetry]
name = "fastapi-manager"
version = "0.1.0"
description = ""
authors = ["Chaliuk Vladyslav <chaliukvladyslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
class-pool = "^0.7rc1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
