[tool.poetry]
name = "fastapi-manager"
version = "0.1.0"
description = ""
authors = ["Chaliuk Vladyslav <chaliukvladyslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
asyncpg = "^0.29.0"
fastapi = "^0.111.1"
tortoise-orm = "^0.21.5"
dynaconf = "^3.2.6"
fastapi-class = "^3.6.0"
dictdiffer = "^0.9.0"
asyncclick = "^8.1.7.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-dependency = "^0.6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
django = "^5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
